--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dist/**"
   ],
   "scripts": {
-    "test": "node_modules/.bin/jest --watch",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "build": "rm -rf dist && ./node_modules/.bin/tsc -p tsconfig.json"
   },
@@ -19,7 +18,12 @@
     "qr.js": "0.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@storybook/html": "^5.0.1",
     "@types/node": "*",
+    "babel-loader": "^8.0.5",
+    "storybook": "^1.0.0",
+    "ts-loader": "^5.3.3",
     "typescript": "^3.2.2"
   }
 }
