--- a/package.json
+++ b/package.json
@@ -1,30 +1,49 @@
 {
   "name": "@bloomprotocol/qr",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Canvas QR Renderer",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "dist/qr.esm.js",
+  "typings": "dist/index.d.ts",
   "repository": "https://github.com/hellobloom/qr",
   "author": "Bloom Team <team@bloom.co>",
   "license": "Apache-2.0",
   "files": [
-    "dist/**"
+    "dist"
   ],
   "scripts": {
-    "storybook": "start-storybook -p 9001 -c .storybook",
+    "start": "tsdx watch --tsconfig ./tsconfig.build.json",
+    "build": "tsdx build --tsconfig ./tsconfig.build.json",
+    "test": "tsdx test",
+    "lint": "tsdx lint src stories",
     "prepare": "npm run build",
-    "build": "rm -rf dist && ./node_modules/.bin/tsc -p tsconfig.json"
+    "prepublishOnly": "npm run test && npm run eslint",
+    "storybook": "start-storybook -p 9001"
   },
   "dependencies": {
     "qr.js": "0.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@storybook/html": "^5.0.1",
+    "@babel/core": "^7.7.7",
+    "@bloomprotocol/eslint-config": "^1.0.0-beta.1",
+    "@bloomprotocol/prettier-config": "^1.0.0-beta.1",
+    "@storybook/html": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "@types/node": "*",
-    "babel-loader": "^8.0.5",
-    "storybook": "^1.0.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.2.2"
+    "@types/react": "^16.9.17",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "acorn": "^7.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^9.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "tsdx": "^0.12.1",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5"
   }
 }
