--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bloomprotocol/qr",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Canvas QR Renderer",
   "main": "dist/index.js",
   "module": "dist/qr.esm.js",
@@ -20,7 +20,8 @@
     "storybook": "start-storybook -p 9001"
   },
   "dependencies": {
-    "qr.js": "0.0.0"
+    "qr.js": "0.0.0",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
